src/objects/Booth_Marketing__c.object
<CustomObject>
    <fields>
        <fullName>Client_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Booth_Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Booth_Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Type__c</fullName>
        <label>Marketing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospectus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Brochure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qr_Code__c</fullName>
        <label>Qr Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>BLN Booth Marketing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Booth_Marketing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Booth Marketing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>